--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   margin: 0;
   padding: 0;
 }
-.App{
+
+.main{
   display: flex;
-  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
 }
