--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,32 +1,49 @@
-.nav{
-  width: 100%;
+.nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 20px;
-  -webkit-box-shadow: 0px 9px 5px -3px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 9px 5px -3px rgba(0,0,0,0.75);
-   box-shadow: 0px 9px 5px -3px rgba(0,0,0,0.75);
-   
-}
-.title{
-  margin-left: 20px;
-}
-.nav .title h1 span{
-   font-size: 40px;
-   color: yellowgreen;
-}
-.add-task{
-  margin-right: 60px;
-}
-.add-task button{
-  padding: 12px 40px;
-  border-radius: 20px;
-  font-size: 18px;
-  cursor: pointer;
+  padding: 10px 20px;
+  background-color: #070101;
   color: white;
-  background-color: blue;
-  border: none;
-  outline: none;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: sans-serif;
+}
+.nav img{
+  width: 100px;
+  height: 100px;
+}
+.logo-icon span{
+  color: violet;
+}
+.route{
+  margin-right: 40px;
+}
+.route a {
+  color: white;
+  text-decoration: none;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.route a:hover {
+  color: #33b4c3;
+}
+
+.route a:last-child {
+  margin-right: 0;
+}
+
+.route a svg {
+  vertical-align: middle;
+}
+.route .search{
+  font-size: 18px;
+}
+.route a.active {
+  color: #33b4c3; 
+  font-weight: bold; 
+}
+@media (max-width:568px){
+    .route{
+      display: none;
+    }
 }
