--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,51 +1,47 @@
+
 .card {
-  width: 250px;
-  min-height: 350px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
   margin: 10px;
-  cursor: pointer;
+  gap: 10px;
+  min-width: 280px;
+  max-width: 300px;
   overflow: hidden;
-  position: relative;
-  border-radius: 5px;
+  color: #000;
+  box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
 }
 
-.card img {
-  width: 100%;
-  height: 350px;
-  background-position: center;
-  background-size: cover;
-  transition: transform 0.5s ease;
+.card h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
-.bottom {
-  width: 100%;
+.card p {
+  font-size: 17px;
+  color: #555;
+  margin-bottom: 15px;
+}
+
+.below {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin: 10px;
-  position: absolute;
-  bottom: -100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 10px;
-  transition: bottom 0.5s ease;
-}
-.bottom p{
-  margin-top: 20px;
-}
-.bottom span{
-  font-weight: 600;
-}
-.bottom h4{
-  font-weight: 500;
-  margin-bottom: 5px;
-}
-.card:hover img {
-  transform: scale(1.1);
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 25px;
 }
 
-.card:hover .bottom {
-  bottom: 0;
+.below p {
+  font-size: 17px;
+  color: #474747;
+}
+
+.dlt {
+  cursor: pointer;
+  color: #f44336;
+  font-size: 20px;
 }
