--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -42,6 +42,7 @@
   margin-bottom: 5px;
   margin-top: 5px;
   color: rgb(255, 255, 255);
+  text-decoration: none;
 }
 .rating{
   margin-bottom: 5px;
@@ -49,4 +50,27 @@
   padding: 7px;
   background-color: #1984ba;
   border-radius: 50%;
+}
+
+.view {
+  text-align: center;
+  margin: 20px 0;
+  display: none;
+
+}
+.view .link {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+.view .link:hover {
+  background-color: #0056b3; 
+  transform: translateY(-2px);
+}
+.card:hover .view {
+  display: block;
 }
