--- a/src/App.css
+++ b/src/App.css
@@ -2,113 +2,8 @@
   margin: 0;
   padding: 0;
 }
-.main{
-  width: 100%;
-  min-height: 100vh;
+.home{
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  justify-content: center;
-  background-color: aqua;
-  gap: 40px;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-.card{
-  max-width: 400px;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #007BFF;
-  -webkit-box-shadow: 0px 0px 29px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 29px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 29px 0px rgba(0,0,0,0.75);
-  border-radius: 10px;
-}
-
-.main.dark {
-  background-color: #121212;
-  color: #ffffff;
-}
-.dark-mode-toggle {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 5px 10px;
-  background-color: #ffffff;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.dark-mode-toggle:hover {
-  background-color: #e0e0e0;
-}
-
-.main.dark .dark-mode-toggle {
-  background-color: #333333;
-  color: #ffffff;
-}
-
-.main.dark .dark-mode-toggle:hover {
-  background-color: #444444;
-}
-.head{
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.head img{
-   width: 150px;
-}
-
-.search {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 20px;
-  padding: 20px;
-  background-color: #f0f0f0; 
-  border-radius: 10px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  width: 300px;
-}
-
-.search h4 {
-  margin-bottom: 20px;
-  font-size: 18px;
-  color: #333; 
-}
-
-.search-input {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  border: 1px solid #ccc; 
-  border-radius: 5px;
-  background-color: #fff;
-  padding: 10px;
-}
-
-.search-input input {
-  flex-grow: 1;
-  border: none;
-  outline: none;
-  padding: 5px;
-  font-size: 16px;
-}
-
-.search-input .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 10px;
-  color: #333; 
-  cursor: pointer;
-}
-
-.search-input .icon:hover {
-  color: #007BFF; 
+  justify-content: space-between;
+  gap: 10px;
 }
